--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "3.3.4",
     "jade": "*",
     "restler": "~2.0.1",
-    "mongoose": "~3.6.15"
+    "mongoose": "~3.6.15",
+    "underscore": "~1.5.1"
   }
 }
