--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "dependencies": {
     "express": "3.3.4",
     "jade": "*",
-    "restler": "~2.0.1",
+    "restler": "git://github.com/eric-wieser/restler.git#8a2ca18a8e942cd8dd85046bf7bb1a0ddf4cc1f9",
     "mongoose": "~3.6.15",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "when": "~2.2.1"
   }
 }
