--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "restler": "git://github.com/eric-wieser/restler.git#8a2ca18a8e942cd8dd85046bf7bb1a0ddf4cc1f9",
     "mongoose": "~3.6.15",
     "underscore": "~1.5.1",
-    "when": "~2.2.1"
+    "when": "~2.2.1",
+    "marked": "~0.2.9"
   }
 }
