--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
     "grunt-contrib-livereload": "~ 0.1.2",
     "grunt-regarde": "~ 0.1.1",
     "grunt-contrib-copy": "~ 0.4.0",
-
     "grunt-jade": "~ 0.4.0",
     "grunt-compass": "~ 0.3.9",
-    "grunt-requirejs": "~0.3.1"
+    "grunt-requirejs": "~0.3.1",
+    "grunt-contrib-watch": "~0.5.1"
   }
 }
