--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "mongoose": "~3.6.15",
     "underscore": "~1.5.1",
     "when": "~2.2.1",
-    "marked": "~0.2.9"
+    "marked": "~0.2.9",
+    "redis": "~0.8.4"
   }
 }
